src/FinancialForce Accounting/objects/TaxDetailPayableCreditNote__c.object
<CustomObject>
    <description>Stores tax details at line level for tax calculations from Avalara.</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of tax jurisdiction</description>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisName__c</fullName>
        <description>Name of tax jurisdiction</description>
        <label>Jurisdiction Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisType__c</fullName>
        <description>Regional type of tax jurisdiction</description>
        <label>Jurisdiction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseCreditNoteLineItem__c</fullName>
        <description>Links to the line item described by this record</description>
        <label>Purchase Credit Note Line Item</label>
        <referenceTo>codaPurchaseCreditNoteLineItem__c</referenceTo>
        <relationshipLabel>Full External Tax Details</relationshipLabel>
        <relationshipName>FullExternalTaxDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Effective tax rate for jurisdiction</description>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of tax jurisdiction</description>
        <label>Tax Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxName__c</fullName>
        <description>Tax Name</description>
        <label>Tax Rule</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Tax amount</description>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <description>Taxable amount on the line</description>
        <label>Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tax Detail Payable Credit Note</label>
    <nameField>
        <label>Tax Detail Payable Credit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Details Payable Credit Note</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>